--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -5766,6 +5766,12 @@ i {
   pointer-events: none;
 }
 
+.btn--bordered {
+  background: none;
+  border: 1px solid #ffffff;
+  color: #ffffff;
+}
+
 .btn:hover {
   opacity: 0.7;
 }
@@ -8949,177 +8955,22 @@ i {
   width: 32px;
 }
 
-.intro--type-1 {
-  color: #2E2E2E;
-}
-
-.intro--type-1 .intro__content {
-  background-color: #00B152;
-}
-
-.intro--type-1 .intro__btn {
-  background-color: #2E2E2E;
-  color: #ffffff;
-}
-
-.intro--type-2 {
-  color: #ffffff;
-}
-
-.intro--type-2 .intro__content {
-  background-color: #000000;
-}
-
-.intro--type-2 .intro__btn {
-  background-color: #ffffff;
-  color: #000000;
-}
-
-.intro--type-3 {
-  color: #ffffff;
-}
-
-.intro--type-3 .intro__content {
-  background-color: #002278;
-}
-
-.intro--type-3 .intro__btn {
-  background-color: #ffffff;
-  color: #000000;
-}
-
-.intro--type-4 {
-  color: #ffffff;
-}
-
-.intro--type-4 .intro__content {
-  background-color: #363636;
-}
-
-.intro--type-4 .intro__btn {
-  background-color: #ffffff;
-  color: #000000;
-}
-
-.intro--type-5 {
-  color: #ffffff;
-}
-
-.intro--type-5 .intro__content {
-  background-color: #770000;
-}
-
-.intro--type-5 .intro__btn {
-  background-color: #ffffff;
-  color: #000000;
-}
-
-.intro--type-6 {
-  color: #ffffff;
-}
-
-.intro--type-6 .intro__content {
-  background-color: #E04F14;
-}
-
-.intro--type-6 .intro__btn {
-  background-color: #ffffff;
-  color: #000000;
-}
-
-.intro--type-7 {
-  color: #2E2E2E;
-}
-
-.intro--type-7 .intro__content {
-  background-color: #EFAC00;
-}
-
-.intro--type-7 .intro__btn {
-  background-color: #2E2E2E;
-  color: #ffffff;
-}
-
-.intro--type-8 {
-  color: #ffffff;
-}
-
-.intro--type-8 .intro__content {
-  background-color: #115500;
-}
-
-.intro--type-8 .intro__btn {
-  background-color: #ffffff;
-  color: #000000;
-}
-
-.intro--type-9 {
-  color: #ffffff;
-}
-
-.intro--type-9 .intro__content {
-  background-color: #431554;
-}
-
-.intro--type-9 .intro__btn {
-  background-color: #ffffff;
-  color: #000000;
-}
-
-.intro--type-10 {
-  color: #ffffff;
-}
-
-.intro--type-10 .intro__content {
-  background-color: #0088EB;
-}
-
-.intro--type-10 .intro__btn {
-  background-color: #ffffff;
-  color: #000000;
-}
-
-.intro--type-11 {
-  color: #ffffff;
-}
-
-.intro--type-11 .intro__content {
-  background-color: #00A98B;
-}
-
-.intro--type-11 .intro__btn {
-  background-color: #ffffff;
-  color: #000000;
-}
-
-.intro--type-12 {
-  color: #2E2E2E;
-}
-
-.intro--type-12 .intro__content {
-  background-color: #CEB094;
-}
-
-.intro--type-12 .intro__btn {
-  background-color: #2E2E2E;
-  color: #ffffff;
-}
-
-.intro--type-13 {
-  color: #2E2E2E;
-}
-
-.intro--type-13 .intro__content {
-  background-color: #AADE55;
-}
-
-.intro--type-13 .intro__btn {
-  background-color: #2E2E2E;
-  color: #ffffff;
+.intro__slider {
+  overflow: visible;
 }
 
 .intro__slide {
   display: flex;
+  background-color: #2E2E2E;
+  color: #ffffff;
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.3s all;
+}
+
+.intro__slide--active {
+  visibility: visible;
+  opacity: 1;
 }
 
 .intro__content {
@@ -9134,31 +8985,146 @@ i {
 .intro__thumb {
   width: 50%;
   min-height: 500px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .intro__thumb img {
   display: block;
-  height: 100%;
-  width: 100%;
+  height: 80%;
+  width: 80%;
   object-fit: cover;
 }
 
 .intro__logo {
-  margin-bottom: 21px;
+  margin-bottom: 30px;
+  height: 90px;
   max-width: 100%;
+  width: auto;
   display: block;
-}
-
-.intro__title {
-  font-weight: bold;
-  font-size: 30px;
-  margin-bottom: 45px;
-  flex-grow: 1;
-  line-height: 1.2;
 }
 
 .intro__btn {
   width: 194px;
+  text-transform: uppercase;
+}
+
+.intro__editor {
+  flex-grow: 1;
+  margin-bottom: 35px;
+}
+
+.intro__editor h1,
+.intro__editor h2,
+.intro__editor h3,
+.intro__editor h4,
+.intro__editor h5,
+.intro__editor h6 {
+  font-weight: 700;
+  margin-bottom: 1rem;
+  line-height: 1.2;
+}
+
+.intro__editor h1,
+.intro__editor h2 {
+  font-size: 44px;
+  text-transform: uppercase;
+}
+
+.intro__editor h3 {
+  font-size: 30px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.intro__editor h4 {
+  font-size: 30px;
+  font-weight: 700;
+}
+
+.intro__editor h5 {
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.intro__editor h6 {
+  font-size: 18px;
+  font-weight: 700;
+}
+
+.intro__editor p {
+  margin-bottom: 1rem;
+}
+
+.intro__editor b,
+.intro__editor strong {
+  font-weight: 700;
+  font-size: 26px;
+  display: block;
+}
+
+.intro__pagination {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  position: relative;
+  bottom: 0;
+  z-index: 2;
+  margin-top: -30px;
+}
+
+.intro__bullet {
+  display: block;
+  box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.08);
+  border-radius: 10px;
+  background-color: #ffffff;
+  padding: 21px 22px 11px 22px;
+  width: calc(100% / 4 - 20px);
+  margin-left: 10px;
+  margin-right: 10px;
+  cursor: pointer;
+  transition: 0.3s all;
+  position: relative;
+}
+
+.intro__bullet:hover {
+  opacity: 0.7;
+}
+
+.intro__bullet--active .intro__progress-line:after {
+  left: 0%;
+  visibility: visible;
+}
+
+.intro__bullet-text {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin-bottom: 28px;
+}
+
+.intro__progress-line {
+  width: 100%;
+  height: 3px;
+  background-color: #E5E5E5;
+  display: block;
+  position: relative;
+  transition: 0.3s;
+  overflow: hidden;
+}
+
+.intro__progress-line:after {
+  display: block;
+  content: "";
+  top: 0;
+  bottom: 0;
+  left: -100%;
+  width: 100%;
+  background-color: #2E2E2E;
+  position: absolute;
+  transition: 5s left;
+  visibility: hidden;
 }
 
 .case {
@@ -12497,11 +12463,6 @@ path {
   .intro__thumb img {
     width: 100%;
     height: auto;
-  }
-
-  .intro__title {
-    font-size: 22px;
-    margin-bottom: 0px;
   }
 
   .intro__btn {
