--- a/src/styles/base/_ui.scss
+++ b/src/styles/base/_ui.scss
@@ -65,6 +65,11 @@
 		opacity: 0.7;
 		pointer-events: none;
 	}
+	&--bordered {
+		background: none;
+		border: 1px solid $light;
+		color: $light;
+	}
 	&:hover {
 		opacity: 0.7;
 	}
