--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -10,6 +10,8 @@
 @import "modules/slider/slider";
 @import "modules/filter/filter";
 @import "modules/socials/socials";
+@import "modules/tabs/tabs";
+@import "modules/info-company/info-company";
 
 // Front
 @import "modules/intro/intro";
