--- a/src/views/27-page.html
+++ b/src/views/27-page.html
@@ -12,6 +12,7 @@
             <section class="single">
                 <div class="container">
                     <div class="single__content">
+                        @@include("../blocks/modules/tabs/tabs.html")
                         <div class="service-table">
                             <div class="service-table__table table">
                                 <div class="table__line table__line--head">
