--- a/src/views/4-page.html
+++ b/src/views/4-page.html
@@ -16,6 +16,7 @@
                             @@include("../blocks/modules/filter/filter.html")
                         </aside>
                         <div class="catalog__main">
+                            @@include("../blocks/modules/info-company/info-company.html")
                             <div class="catalog__header">
                                 <form class="toolbar">
                                     <div class="sort-type">
