--- a/src/styles/base/_text.scss
+++ b/src/styles/base/_text.scss
@@ -4,6 +4,9 @@
 	@include r(1200) {
 		font-size: 14px;
 	}
+	& :last-child {
+		margin-bottom: 0;
+	}
 	&--center {
 		text-align: center;
 		img {
