--- a/src/blocks/modules/header/header.scss
+++ b/src/blocks/modules/header/header.scss
@@ -161,6 +161,7 @@
 		text-decoration: none;
 		display: inline-flex;
 		align-items: center;
+		text-transform: uppercase;
 		svg {
 			margin-right: 10px;
 			fill: #00B152;
