--- a/src/blocks/modules/product/product.scss
+++ b/src/blocks/modules/product/product.scss
@@ -19,10 +19,10 @@
 		}
 	}
 	&__articles {
-		width: calc(100% / 12 * 9 - 16px);
-		@include r(1200) {
-			width: 100%;
-		}
+		// width: calc(100% / 12 * 9 - 16px);
+		// @include r(1200) {
+		// 	width: 100%;
+		// }
 	}
 }
 
@@ -95,9 +95,32 @@
 		margin-bottom: 28px;
 	}
 	&__content {
-
+		max-height: 200px;
+		transition: 0.3s all;
+		position: relative;
+		overflow: hidden;
+		margin-bottom: 10px;
+		&:after {
+			height: 50%;
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			right: 0;
+			content: "";
+			background: linear-gradient(0deg, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
+		}
+		&--full {
+			max-height: 1500px;
+			&:after {
+				display: none;
+			}
+		}
 	}
 	&__line {
+		transition: 0.3s all;
+		visibility: visible;
+		opacity: 1;
+		display: block;
 		@include r(1200) {
 			margin-bottom: 10px;
 		}
@@ -109,12 +132,24 @@
 			}
 		}
 	}
+	&__more {
+		padding: 10px;
+		display: inline-block;
+		cursor: pointer;
+		transition: 0.3s all;
+		&:hover {
+			opacity: 0.7;
+		}
+		&--hidden {
+			display: none;
+		}
+	}
 }
 
 .product-files {
 	margin-bottom: 40px;
 	@include r(1200) {
-		margin-bottom: 0px;
+		// margin-bottom: 0px;
 	}
 	&__title {
 		margin-bottom: 26px;
