--- a/src/styles/base/_ui.scss
+++ b/src/styles/base/_ui.scss
@@ -1,13 +1,18 @@
 .search {
 	position: relative;
 	display: flex;
+	&--catalog {
+		.search__input {
+			border: 1px solid $dark;
+		}
+	}
 	&__input {
 		width: 100%;
 		height: 40px;
 		border: none;
 		padding-right: 50px;
 		padding-left: 8px;
-		background-color: #4F4F4F;
+		background-color: $light;
 	}
 	&__btn {
 		position: absolute;
@@ -255,6 +260,13 @@
 			font-family: $font-main;
 			color: #BDBDBD;
 		}
+	}
+	&__select {
+		display: block;
+		width: 100%;
+		font-family: $font-main;
+		border: 1px solid $dark;
+		padding: 12px 16px;
 	}
 	&__textarea {
 		font-family: $font-main;
